syntax = "proto3";
option java_package = "com.game.protoGen";
option go_package = "/protoGen";

message PbVector3{
  int32 x = 1;
  int32 y = 2;
  int32 z = 3;
}

message EntityTRS{
  int64 EntityID = 1;
  PbVector3 position = 2;
  PbVector3 rotation = 3;
  PbVector3 scale = 4;
  double speed = 5;
  PbVector3 InputVector = 6;
}

message OldCreateSceneReq {
  string scene_name = 1;
  bool reset_data = 2;
  int64 actor_id = 3;
}

message OldCreateSceneRes {
  int32 scene_id = 1;
}

message OldCreateSceneFinishNtf {
   uint32 scene_id = 1;
}

message SceneInfo {
  string scene_name = 1;
  int32 scene_id = 2;
  int32 player_count = 3;
}

message OldSceneListReq{
}

message OldSceneListRes{
  repeated SceneInfo scene_list = 1;
}

message OldEnterSceneReq{
  uint32 scene_id = 1;
  int32 profession = 2;
}

message OldEnterSceneRes{
}

message OldEnterDefaultSceneReq{
  int32 profession = 1;
}

message OldEnterDefaultSceneRes{
}

message OldPlayerEnterSceneNtf{
  int64 uid = 1;
  int32 profession = 2;
  EntityTRS trs = 3;
}

message OldPlayerLeaveSceneNtf {
  EntityTRS trs = 1;
}

message OldLeaveSceneReq{
}

message OldLeaveSceneRes{
}

message ClientMessagePackage{
  bytes content = 1;
}

message OldSceneMessagePush {
  ClientMessagePackage client_message = 1;
  bool filter_self = 2;
  uint32 message_id = 3;
}

message OldSyncSceneMessageNtf {
  ClientMessagePackage scene_message = 1;
  uint32 message_id = 2;
}

message OldServerSceneFinishLoadingNtf{
}

message OldClientSceneFinishLoadingReq{
}

message OldClientSceneFinishLoadingRes{
}

message OldResetSceneReq{
}

message OldResetSceneRes{
}

message OldClientSyncMovePush{
  EntityTRS trs = 1;
}

message OldPlayerMoveToNtf{
  EntityTRS trs = 1;
}